# llm-carnival

./: .gitignore  README.md  docker-compose.yml
action_decision/: Dockerfile  pyproject.toml
action_decision/app/: action_decider.py  main.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/: globals.css
frontend/app/dashboard/: page.tsx
frontend/app/hooks/: fetch-decision-tree-json.ts  fetch-decision-tree.ts  fetch-game-state.ts  fetch-image.ts  use-get-decision.ts  use-update-game-state.ts
frontend/app/lib/: definitions.ts  transform-data-for-d3.ts  use-sse.ts
frontend/app/ui/: decision-tree.tsx  game-state.tsx  get-decision-button.tsx  image-handler.tsx  stream-decision-tree-current-step.tsx  stream-decision-tree-json.tsx  stream-decision-tree.tsx  stream-example.tsx  stream-game-analyzer-status.tsx  time-since.tsx
game_state/: Dockerfile  pyproject.toml
game_state/app/: game_state_manager.py  interactive_game_analyzer.py  main.py
model_server/: Dockerfile  pyproject.toml
model_server/app/: main.py
shared/: pyproject.toml
shared/models/: chat_model.py  huggingface_gemma_2b_it.py  huggingface_gpt2.py  huggingface_llm.py  huggingface_mistral.py  huggingface_vqa.py  openrouter_ai_api.py
shared/tests/: test_responses.py
shared/utils/: client_utils.py  image_utils.py  observe_utils.py  python_exec_utils.py
shared/utils/client_utils/: game_state.py  http_client.py  model_server.py
