[tool.poetry]
name = "game-state"
version = "0.1.0"
description = ""
authors = ["AshisGhosh <ashisghosh@live.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
